@@ -2199,6 +2199,127 @@ name|key
 argument_list|)
 return|;
 block|}
+comment|/**    * Sets all deprecated properties that are not currently set but have a    * corresponding new property that is set. Useful for iterating the    * properties when all deprecated properties for currently set properties    * need to be present.    */
+DECL|method|setDeprecatedProperties ()
+specifier|public
+name|void
+name|setDeprecatedProperties
+parameter_list|()
+block|{
+name|DeprecationContext
+name|deprecations
+init|=
+name|deprecationContext
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
+name|Properties
+name|props
+init|=
+name|getProps
+argument_list|()
+decl_stmt|;
+name|Properties
+name|overlay
+init|=
+name|getOverlay
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|DeprecatedKeyInfo
+argument_list|>
+name|entry
+range|:
+name|deprecations
+operator|.
+name|getDeprecatedKeyMap
+argument_list|()
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|String
+name|depKey
+init|=
+name|entry
+operator|.
+name|getKey
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|overlay
+operator|.
+name|contains
+argument_list|(
+name|depKey
+argument_list|)
+condition|)
+block|{
+for|for
+control|(
+name|String
+name|newKey
+range|:
+name|entry
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|newKeys
+control|)
+block|{
+name|String
+name|val
+init|=
+name|overlay
+operator|.
+name|getProperty
+argument_list|(
+name|newKey
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|!=
+literal|null
+condition|)
+block|{
+name|props
+operator|.
+name|setProperty
+argument_list|(
+name|depKey
+argument_list|,
+name|val
+argument_list|)
+expr_stmt|;
+name|overlay
+operator|.
+name|setProperty
+argument_list|(
+name|depKey
+argument_list|,
+name|val
+argument_list|)
+expr_stmt|;
+break|break;
+block|}
+block|}
+block|}
+block|}
+block|}
 comment|/**    * Checks for the presence of the property<code>name</code> in the    * deprecation map. Returns the first of the list of new keys if present    * in the deprecation map or the<code>name</code> itself. If the property    * is not presently set but the property map contains an entry for the    * deprecated key, the value of the deprecated key is set as the value for    * the provided property name.    *    * @param name the property name    * @return the first property in the list of properties mapping    *         the<code>name</code> or the<code>name</code> itself.    */
 DECL|method|handleDeprecation (DeprecationContext deprecations, String name)
 specifier|private
